--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -4,96 +4,130 @@ date: 2024-08-24
 layout: post
 ---
 
-# Outline of IRS Publication: Tax Withholding and Estimated Tax (2023)
+# Outline: Tax Withholding & Estimated Tax (2023)
 
 ## 1. Introduction
-   - **Overview of Federal Income Tax**
-   - **Methods to Pay Tax as You Earn Income**
-     - Withholding
-     - Estimated Tax
+
+w/h = with holding
+
+This section discusses income tax w/h
+on:
+
+- Salaries & wages,
+- Tips,
+- Taxable fringe benefits,
+- Sick pay,
+- Pensions & annuities,
+- Gambling winnings,
+- Unemployment compensation, &
+- Certain federal payments.
+
+- Methods to Pay Tax as You Earn Income
+   - w/h
+   - Estimated Tax
 
 ## 2. What's New for 2024
-   - **Tax Law Changes for 2024**
-   - **Reference:** Pub. 505, Tax Withholding and Estimated Tax
+
+   - Tax Law Changes for 2024 - See **Pub. 505**, Tax w/h & Estimated Tax
 
 ## 3. Reminders
-   - **Estimated Tax Safe Harbor for Higher-Income Taxpayers**
-     - Adjusted Gross Income thresholds
 
-## 4. Tax Withholding
-   - **Income Tax Withholding on Various Types of Income**
-     - Salaries and Wages
+   - **Estimated Tax Safe Harbor for Higher-Income Taxpayers** pay the smaller of:
+     - PAY 90% of AGI
+     - OR
+     - 110% of est. tax
+
+## 4. Tax w/h
+
+   - **Income Tax w/h on Various Types of Income** - See **Pub. 505**, Tax w/h & Estimated Tax
+     - Salaries & Wages
      - Tips
      - Taxable Fringe Benefits
      - Sick Pay
-     - Pensions and Annuities
+     - Pensions & Annuities
      - Gambling Winnings
      - Unemployment Compensation
      - Certain Federal Payments
-   - **Backup Withholding**
-   - **Reference:** Pub. 505, Tax Withholding and Estimated Tax
+   - **Backup w/h - subject to 24% rate, IFF no TIN, TIN is not correct, IRS tells payer to w/h int & dividends
+      - https://www.irs.gov/businesses/small-businesses-self-employed/backup-w/h
+      - Penalties for false information to avoid backup w/h. The civil penalty is $500, criminal is fine up to $1,000 or 1 year, or both.
+
 
 ## 5. Determining Amount of Tax Withheld Using Form W-4
-   - **Steps to Complete Form W-4**
-   - **Special Considerations**
+
+   - **FOLLOW: Form W-4**
+   - https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR
+   - Special Considerations
      - New Jobs
      - Pension Income
-   - **Checking and Changing Your Withholding**
-   - **Completing Form W-4 and Worksheets**
+   - Checking & Changing Your w/h
+   - Completing Form W-4 & Worksheets
 
-## 6. Exemption From Withholding
+## 6. Exemption From w/h
+
    - **Eligibility Criteria**
-   - **Special Rules for Students, Elderly, and Blind**
+   - **Special Rules for Students, Elderly, & Blind**
    - **Claiming Exemption with Form W-4**
 
 ## 7. Supplemental Wages
-   - **Definition and Withholding Rules**
+
+   - **Definition & w/h Rules**
    - **Expense Allowances**
 
 ## 8. Penalties for False Information on Form W-4
 
-## 9. Tips and Tax Withholding
+## 9. Tips & Tax w/h
+
    - **Reporting Tips to Employers**
-   - **Withholding Rules**
+   - **w/h Rules**
    - **Reference:** Pub. 531, Reporting Tip Income
 
 ## 10. Taxable Fringe Benefits
-   - **Examples and Withholding Rules**
-   - **Reference:** Pub. 505, Tax Withholding and Estimated Tax
+
+   - **Examples & w/h Rules**
+   - **Reference:** Pub. 505, Tax w/h & Estimated Tax
 
 ## 11. Sick Pay
-   - **Withholding Rules for Sick Pay**
-   - **Special Cases Involving Third-Party Payers**
-   - **Union Agreements and Sick Pay**
 
-## 12. Pensions and Annuities
-   - **Withholding Rules**
-   - **Reference:** Pub. 505, Tax Withholding and Estimated Tax
+   - **w/h Rules for Sick Pay**
+   - **Special Cases Involving Third-Party Payers**
+   - **Union Agreements & Sick Pay**
+
+## 12. Pensions & Annuities
+
+   - **w/h Rules**
+   - **Reference:** Pub. 505, Tax w/h & Estimated Tax
 
 ## 13. Gambling Winnings
-   - **Withholding Rules and Exceptions**
+
+   - **w/h Rules & Exceptions**
    - **Form W-2G**
 
 ## 14. Unemployment Compensation
-   - **Withholding Options and Requirements**
+
+   - **w/h Options & Requirements**
    - **Reference:** Form W-4V
 
 ## 15. Federal Payments
-   - **Optional Withholding on Federal Payments**
+
+   - **Optional w/h on Federal Payments**
    - **Reference:** Pub. 225, Farmer’s Tax Guide
 
-## 16. Backup Withholding
-   - **Situations Where Backup Withholding Applies**
-   - **Reference:** IRS Backup Withholding Information
+## 16. Backup w/h
+
+   - **Situations Where Backup w/h Applies**
+   - **Reference:** IRS Backup w/h Information
 
 ## 17. Estimated Tax for 2024
+
    - **Who Must Pay Estimated Tax**
-   - **Special Rules for Farmers, Fishermen, and Aliens**
+   - **Special Rules for Farmers, Fishermen, & Aliens**
    - **General Rule for Making Payments**
    - **How to Figure Estimated Tax**
    - **When to Pay Estimated Tax**
 
 ## 18. How To Pay Estimated Tax
+
    - **Methods of Payment**
      - Online Payment Options
      - EFTPS
@@ -102,28 +136,31 @@ layout: post
      - Pay by Check or Money Order
    - **Overpayment Credit**
 
-## 19. Credit for Withholding and Estimated Tax for 2023
+## 19. Credit for w/h & Estimated Tax for 2023
+
    - **Claiming Credit on Tax Return**
-   - **Special Rules for Multiple Employers, Corrected Forms, and Separate Returns**
+   - **Special Rules for Multiple Employers, Corrected Forms, & Separate Returns**
 
 ## 20. Underpayment Penalty for 2023
+
    - **Conditions for Penalty**
-   - **Special Rules for Farmers and Fishermen**
+   - **Special Rules for Farmers & Fishermen**
    - **IRS Penalty Calculation**
    - **Reference:** Instructions for Form 2210
 
-## 21. Additional Information and Forms
-   - **Publications and Forms Mentioned**
-     - **Pub. 505** - Tax Withholding and Estimated Tax
-     - **Pub. 501** - Dependents, Standard Deduction, and Filing Information
+## 21. Additional Information & Forms
+
+   - **Publications & Forms Mentioned**
+     - **Pub. 505** - Tax w/h & Estimated Tax
+     - **Pub. 501** - Dependents, St&ard Deduction, & Filing Information
      - **Pub. 531** - Reporting Tip Income
      - **Pub. 225** - Farmer’s Tax Guide
      - **Pub. 519** - U.S. Tax Guide for Aliens
      - **Pub. 555** - Community Property
      - **Pub. 966** - EFTPS (Electronic Federal Tax Payment System)
      - **Pub. 5250** - Pay by Cash
-     - **Form W-4** - Employee’s Withholding Certificate
-     - **Form W-4V** - Voluntary Withholding Request
+     - **Form W-4** - Employee’s w/h Certificate
+     - **Form W-4V** - Voluntary w/h Request
      - **Form 1040-ES** - Estimated Tax for Individuals
      - **Form 8822** - Change of Address
-     - **Form 2210** - Underpayment of Estimated Tax by Individuals, Estates, and Trusts
+     - **Form 2210** - Underpayment of Estimated Tax by Individuals, Estates, & Trusts
